# reachy_assistant

./: README.md  main.py  mcp_server.py  pyproject.toml  run_reachy_supervisor.py  start_daemon.sh
script/: collect_audio_sample.py  openwakeword_example.py  print_audio_sample.sh  reset_internal_hub.sh  reset_usb.sh  time_audio_fail.py  wiggle_antennas.py
src/: audio.py  mcp_light_server.py  mcp_server.py  wakeword.py
tools/: emotions.py  lights.py
