[project]
name = "reachy_mini_experiments"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "reachy-mini",
    "openwakeword==0.4.0",
    "pyaudio==0.2.14",
    "mcp>=1.25.0",
    "scipy-stubs~=1.16.3",
    "python-dotenv",
    "openai",
    "flux_led==1.2.0"
]
