[project]
name = "reachy_mini_experiments"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.11.*"
dependencies = [
    "reachy-mini==1.2.13",
    "openwakeword==0.4.0",
    "pyaudio==0.2.14",
    "mcp>=1.25.0",
    "scipy-stubs~=1.16.3",
    "python-dotenv",
    "openai",
    "flux_led==1.2.0",
    "numpy==2.4.1"
]
